<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_info_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/title_name_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_where_business"
                android:textAlignment="center"
                android:textSize="@dimen/title_step_register"
                android:layout_marginBottom="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_name_business">
                <RadioGroup
                    android:id="@+id/groupRadioButton"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButtonOnlyEstablishment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hit_only_establishment" />
                    <RadioButton
                        android:id="@+id/radioButtonEstablishmentAndDelivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hit_establishment_delivery" />
                    <RadioButton
                        android:id="@+id/radioButtonOnlyDelivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hit_only_delivery" />
                </RadioGroup>
            </LinearLayout>
            <Button
                android:id="@+id/bt_continue_register_step_three"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/bt_continue" />
        </RelativeLayout>


    </FrameLayout>
</layout>