<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controllers.calendarBusiness.CalendarBusinessFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/text"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/monday"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"
                    android:textAlignment="center"
                    android:textSize="16sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/daysRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:clipToPadding="true"
                android:overScrollMode="never">

                <com.myproject.appservice.controllers.calendarBusiness.TimeLineView
                    android:id="@+id/timeline_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startLabel="9"
                    app:backgroundColor="@color/white"
                    app:labelColor="@color/lightGrey"
                    app:eventBackground="@android:color/holo_blue_dark"
                    app:eventNameColor="@color/white"
                    app:eventTimeColor="@color/white" />

            </ScrollView>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/todayFloatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:visibility="gone"
            android:text="@string/floating_button_today" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFloatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:clickable="true"
            app:tint="@color/white"
            android:backgroundTint="@color/black"
            app:srcCompat="@drawable/ic_add_24"
            android:contentDescription="@string/bottom_sheet_behavior" />

    </RelativeLayout>
</layout>