<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/layout_info_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_name_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_business_services"
                android:textAlignment="center"
                android:textSize="@dimen/title_step_register"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/information_list_empty" />

            <ListView
                android:id="@+id/list_service_addService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bt_add_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_add_24"
                android:text="@string/hint_add_service" />
        </LinearLayout>
        <Button
            android:id="@+id/bt_continue_register_step_six"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/bt_continue" />
    </RelativeLayout>
</layout>