<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.calendarBusiness.bookingBusinessDetail.ActivityNewBooking" >



        <TextView
            android:id="@+id/title_new_booking_business"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:text="@string/title_new_booking"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_business"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/title_new_booking_business"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:contentDescription="exit"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        tools:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@id/title_new_booking_business"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bt_save"
            android:textColor="@android:color/black"
            android:enabled="false" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/title_new_booking_business"
        app:layout_constraintEnd_toEndOf="parent"
        tools:background="#5C5C5C" />

    <ImageView
        android:id="@+id/img_account_new_booking"
        android:layout_margin="5dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_black_24"
        android:contentDescription="account" />

    <TextView
        android:id="@+id/et_name_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_name_customer"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toEndOf="@id/img_account_new_booking"/>


    <TextView
        android:id="@+id/name_customer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:maxEms="1"
        android:text="@string/name_customer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/occasinal"
        app:layout_constraintStart_toEndOf="@id/img_account_new_booking"
        app:layout_constraintTop_toBottomOf="@id/et_name_customer" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/occasinal"
        android:layout_width="wrap_content"
        android:text="@string/occasional_customer"
        android:checked="true"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toEndOf="@id/name_customer"
        app:layout_constraintBottom_toBottomOf="@id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_account_new_booking"
        tools:background="#5C5C5C" />

    <TextView
        android:id="@+id/et_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_service"
        android:padding="5dp"
        android:textSize="18sp"
        android:gravity="start"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_service"
        app:layout_constraintEnd_toEndOf="parent"
        tools:background="#5C5C5C" />

    <TextView
        android:id="@+id/select_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_service"
        app:layout_constraintTop_toTopOf="@id/divider3"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/lightGrey"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/bt_select_service"
        android:layout_width="28dp"
        android:layout_height="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/select_service"
        app:layout_constraintTop_toTopOf="@id/divider3"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/select_service"
        app:layout_constraintEnd_toEndOf="parent"
        tools:background="#5C5C5C" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/divider4">

        <TextView
            android:id="@+id/et_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_date_time"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mañana"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="15dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_date_time"
        app:layout_constraintEnd_toEndOf="parent"
        tools:background="#5C5C5C" />

    <TextView
        android:id="@+id/et_extraInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_additional_information"
        android:padding="5dp"
        android:textSize="18sp"
        android:gravity="start"
        android:textStyle="bold"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/divider5"/>

    <View
        android:id="@+id/divider7"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_extraInformation"
        app:layout_constraintEnd_toEndOf="parent"
        tools:background="#5C5C5C" />

    <TextView
        android:id="@+id/note_only_employer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_only_employers"
        app:layout_constraintTop_toTopOf="@id/divider7"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/lightGrey"
        android:textSize="16sp"/>

    <View
        android:id="@+id/divider8"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/note_only_employer"
        app:layout_constraintEnd_toEndOf="parent"
        tools:background="#5C5C5C" />

    <TextView
        android:id="@+id/note_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_customer"
        app:layout_constraintTop_toTopOf="@id/divider8"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/lightGrey"
        android:textSize="16sp"/>

    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/note_customer"
        app:layout_constraintEnd_toEndOf="parent"
        tools:background="#5C5C5C" />


    <Button
        android:id="@+id/save_bt_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/bt_save"
        android:textColor="@android:color/black"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>
